--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,11 @@ dependencies:
     sdk: flutter
   #?  flutter_bloc is a Flutter package that helps you to easily implement the BLoC (Business Logic Component) design pattern.
   flutter_bloc: ^8.1.3
+  flutter_riverpod: ^2.1.1
+  #?  flutter_screenutil is a Flutter package that provides a set of utilities for implementing responsive UI.
+  flutter_screenutil: ^5.9.0
+  #?  go_router is a Flutter package that allows you to easily manage your app's navigation.
+  go_router: ^8.0.1
 
   flutter_native_splash:
     ^2.2.16
