--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,22 @@ dependencies:
     sdk: flutter
   #?  flutter_bloc is a Flutter package that helps you to easily implement the BLoC (Business Logic Component) design pattern.
   flutter_bloc: ^8.1.3
+  #? flutter_form_bloc is a Flutter package that helps you to easily create forms with validation.
+  bloc: any
+  #? google_fonts is a Flutter package that provides a set of fonts from Google Fonts.
+  google_fonts: ^5.0.0
+  #?  flutter_screenutil is a Flutter package that provides a set of utilities for implementing responsive UI.
+  flutter_screenutil: ^5.9.0
+  #? flutter_svg is a Flutter package for drawing SVG pictures.
+  flutter_svg: ^2.0.6
+  #? Fluttertoast is a Flutter plugin to show toast.
+  fluttertoast: ^8.1.1
+  #?  go_router is a Flutter package that allows you to easily manage your app's navigation.
+  go_router: ^8.0.1
+  #? equatable is a Dart package that helps you to implement value based equality without needing to explicitly override == and hashCode.
+  equatable: ^2.0.5
+  #? The email_validator package is a lightweight and efficient Dart package for validating email addresses in Flutter and Dart applications. 
+  email_validator: ^3.0.0
 
   flutter_native_splash:
     ^2.2.16
