--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
     ^2.2.16
   get_it: ^8.0.3
   pinput: ^5.0.1
+  country_picker: ^2.0.27
+  country_list_pick: ^1.0.1+6
   
 
 dev_dependencies:
