--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   pinput: ^5.0.1
   country_picker: ^2.0.27
   country_list_pick: ^1.0.1+6
+  intl: ^0.20.2
+  carousel_slider: ^5.0.0
   
 
 dev_dependencies:
